[gd_scene load_steps=5 format=3 uid="uid://b52oqqpc2t3vc"]

[ext_resource type="Script" uid="uid://dpt4b527th336" path="res://mob_base.gd" id="1_3r84c"]
[ext_resource type="Script" uid="uid://dra02w4h3yisu" path="res://Systems/state_machine/state_machine.gd" id="3_kne1u"]
[ext_resource type="Script" uid="uid://d13naja2rmnyr" path="res://Systems/Movement/movement_component.gd" id="4_e80uo"]
[ext_resource type="Script" uid="uid://bhmmp740tprid" path="res://Systems/Combat/Health/health_component.gd" id="5_health"]

[node name="MobBase" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_3r84c")

[node name="MovementMachine" type="Node" parent="."]
script = ExtResource("3_kne1u")
metadata/_custom_type_script = "uid://dra02w4h3yisu"

[node name="ActionMachine" type="Node" parent="."]
script = ExtResource("3_kne1u")
metadata/_custom_type_script = "uid://dra02w4h3yisu"

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_e80uo")
metadata/_custom_type_script = "uid://d13naja2rmnyr"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_health")
